--- a/app/src/main/res/layout/activity_abstract_phone.xml
+++ b/app/src/main/res/layout/activity_abstract_phone.xml
@@ -3,7 +3,7 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_height="match_parent"
 android:layout_width="match_parent">
-	<android.support.v7.widget.Toolbar
+	<androidx.appcompat.widget.Toolbar
 	android:id="@+id/main_toolbar"
 	android:layout_width="match_parent"
 	android:layout_height="?android:attr/actionBarSize"
