--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -34,7 +34,7 @@
 			panel:height_policy="exact_child"
 			panel:sizes="1/11"/>
 	</LinearLayout>
-	<android.support.v7.widget.Toolbar
+	<androidx.appcompat.widget.Toolbar
 		android:id="@+id/board_nav"
 		android:layout_width="match_parent"
 		android:layout_height="?android:attr/actionBarSize"
