--- a/app/src/main/res/layout/fragment_gamelist_online.xml
+++ b/app/src/main/res/layout/fragment_gamelist_online.xml
@@ -15,11 +15,11 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:textColor="@color/white"
 		android:text="Searching For Opponents..."/>
 	</FrameLayout>
-	<android.support.v4.view.ViewPager
+	<androidx.viewpager.widget.ViewPager
 	android:id="@+id/swipe_list"
 	android:layout_below="@id/layout02"
 	android:layout_alignParentBottom="true">
-		<android.support.v4.view.PagerTabStrip
+		<androidx.viewpager.widget.PagerTabStrip
 		android:id="@+id/pager_title_strip"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
@@ -28,5 +28,5 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:textColor="@color/white"
 		android:paddingTop="4dp"
 		android:paddingBottom="4dp"/>
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 </RelativeLayout>
