--- a/app/src/main/res/layout/dialog_newgame_local.xml
+++ b/app/src/main/res/layout/dialog_newgame_local.xml
@@ -8,7 +8,7 @@ android:stretchColumns="1">
 		<TextView
 		android:layout_gravity="right|center_vertical"
 		android:paddingRight="6dp"
-		android:textColor="#000000"
+		android:textColor="?android:attr/textColorPrimary"
 		android:text="Game Name:"/>
 		<EditText
 		android:id="@+id/game_name"
@@ -18,7 +18,7 @@ android:stretchColumns="1">
 		<TextView
 		android:layout_gravity="right|center_vertical"
 		android:paddingRight="6dp"
-		android:textColor="#000000"
+		android:textColor="?android:attr/textColorPrimary"
 		android:text="Game Type:"/>
 		<Spinner
 		android:id="@+id/game_type"/>
@@ -27,7 +27,7 @@ android:stretchColumns="1">
 		<TextView
 		android:layout_gravity="right|center_vertical"
 		android:paddingRight="6dp"
-		android:textColor="#000000"
+		android:textColor="?android:attr/textColorPrimary"
 		android:text="Opponent:"/>
 		<Spinner
 		android:id="@+id/opponent"/>
