--- a/app/src/main/res/layout/fragment_msgbox.xml
+++ b/app/src/main/res/layout/fragment_msgbox.xml
@@ -9,7 +9,7 @@ xmlns:panel="http://schemas.android.com/apk/res-auto">
 	android:gravity="center"
 	android:padding="6dp"
 	android:text="Chat"
-	android:textColor="#ffff"
+	android:textColor="?android:attr/textColorPrimaryInverse"
 	android:textSize="14sp"/>
 	<ListView
 	android:id="@+id/msg_list"
