--- a/app/src/main/res/layout/dialog_benchmark.xml
+++ b/app/src/main/res/layout/dialog_benchmark.xml
@@ -7,7 +7,7 @@ android:orientation="vertical"
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:id="@+id/text01"
-	android:textColor="#ff000000"
+	android:textColor="?android:attr/textColorPrimary"
 	android:text="@string/benchmark"/>
 	<TableLayout
 	android:id="@+id/layout01"
