--- a/app/src/main/res/layout/dialog_confirm_rematch.xml
+++ b/app/src/main/res/layout/dialog_confirm_rematch.xml
@@ -3,7 +3,7 @@
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:id="@+id/rematch_confirm"
-	android:textColor="#000000"/>
+	android:textColor="?android:attr/textColorPrimary"/>
 	<TableLayout
 	android:layout_below="@id/rematch_confirm"
 	android:layout_centerHorizontal="true"
@@ -13,7 +13,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			<TextView
 			android:layout_gravity="right|center_vertical"
 			android:paddingRight="6dp"
-			android:textColor="#000000"
+			android:textColor="?android:attr/textColorPrimary"
 			android:text="Game Type:"/>
 			<Spinner
 			android:id="@+id/game_type"/>
@@ -22,7 +22,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			<TextView
 			android:layout_gravity="right|center_vertical"
 			android:paddingRight="6dp"
-			android:textColor="#000000"
+			android:textColor="?android:attr/textColorPrimary"
 			android:text="Your Color:"/>
 			<Spinner
 			android:id="@+id/color"/>
