--- a/app/src/main/res/layout/dialog_cputime.xml
+++ b/app/src/main/res/layout/dialog_cputime.xml
@@ -4,7 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 android:padding="16dp">
 	<TextView
 	android:id="@+id/layout01"
-	android:textColor="#000000"
+	android:textColor="?android:attr/textColorPrimary"
 	android:text="@string/cputime_msg"/>
 	<TableRow
 	android:paddingTop="6dp"
@@ -17,7 +17,7 @@ android:padding="16dp">
 		<TextView
 		android:textSize="18sp"
 		android:layout_marginLeft="6dp"
-		android:textColor="#000000"
+		android:textColor="?android:attr/textColorPrimary"
 		android:layout_gravity="center"
 		android:gravity="center"
 		android:text="Seconds"/>
