--- a/app/src/main/res/layout/dialog_endgame.xml
+++ b/app/src/main/res/layout/dialog_endgame.xml
@@ -8,32 +8,32 @@ android:layout_centerHorizontal="true">
 		<TextView
 		android:layout_gravity="right"
 		android:layout_marginRight="12dp"
-		android:textColor="#000000"
+		android:textColor="?android:attr/textColorPrimary"
 		android:text="Oppenent :"/>
 		<TextView
 		android:id="@+id/opponent"
-		android:textColor="#000000"/>
+		android:textColor="?android:attr/textColorPrimary"/>
 	</TableRow>
 	<TableRow
 	android:layout_margin="2dp">
 		<TextView
 		android:layout_gravity="right"
 		android:layout_marginRight="12dp"
-		android:textColor="#000000"
+		android:textColor="?android:attr/textColorPrimary"
 		android:text="Result :"/>
 		<TextView
 		android:id="@+id/result"
-		android:textColor="#000000"/>
+		android:textColor="?android:attr/textColorPrimary"/>
 	</TableRow>
 	<TableRow
 	android:layout_margin="2dp">
 		<TextView
 		android:id="@+id/psr_type"
-		android:textColor="#000000"
+		android:textColor="?android:attr/textColorPrimary"
 		android:layout_gravity="right"
 		android:layout_marginRight="12dp"/>
 		<TextView
 		android:id="@+id/psr_score"
-		android:textColor="#000000"/>
+		android:textColor="?android:attr/textColorPrimary"/>
 	</TableRow>
 </TableLayout>
