--- a/app/src/main/res/layout/dialog_gamedetails_local.xml
+++ b/app/src/main/res/layout/dialog_gamedetails_local.xml
@@ -12,68 +12,68 @@ android:orientation="vertical">
 			android:gravity="right"
 			android:textStyle="bold"
 			android:text="Game Name:  "
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 			<TextView
 			android:id="@+id/name"
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 		</TableRow>
 		<TableRow>
 			<TextView
 			android:gravity="right"
 			android:textStyle="bold"
 			android:text="Game Type:  "
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 			<TextView
 			android:id="@+id/gametype"
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 		</TableRow>
 		<TableRow>
 			<TextView
 			android:gravity="right"
 			android:textStyle="bold"
 			android:text="Opponent:  "
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 			<TextView
 			android:id="@+id/opponent"
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 		</TableRow>
 		<TableRow>
 			<TextView
 			android:gravity="right"
 			android:textStyle="bold"
 			android:text="Create Time:  "
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 			<TextView
 			android:id="@+id/ctime"
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 		</TableRow>
 		<TableRow>
 			<TextView
 			android:gravity="right"
 			android:textStyle="bold"
 			android:text="Save Time:  "
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 			<TextView
 			android:id="@+id/stime"
-			android:textColor="#000000"/>
+			android:textColor="?android:attr/textColorPrimary"/>
 		</TableRow>
 	</TableLayout>
 	<TextView
 	android:textStyle="bold"
 	android:text="Zfen:"
-	android:textColor="#000000"/>
+	android:textColor="?android:attr/textColorPrimary"/>
 	<TextView
 	android:id="@+id/zfen"
 	android:paddingBottom="12dp"
 	android:typeface="monospace"
-	android:textColor="#000000"/>
+	android:textColor="?android:attr/textColorPrimary"/>
 	<TextView
 	android:textStyle="bold"
 	android:text="Move History:"
-	android:textColor="#000000"/>
+	android:textColor="?android:attr/textColorPrimary"/>
 	<TextView
 	android:id="@+id/history"
 	android:typeface="monospace"
-	android:textColor="#000000"/>
+	android:textColor="?android:attr/textColorPrimary"/>
 </LinearLayout>
 </ScrollView>
