--- a/app/src/main/res/layout/dialog_single_text.xml
+++ b/app/src/main/res/layout/dialog_single_text.xml
@@ -3,4 +3,4 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/text"
 android:padding="16dp"
-android:textColor="#000000"/>
+android:textColor="?android:attr/textColorPrimary"/>
