--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<style name="DefaultTheme" parent="Theme.AppCompat.Light.NoActionBar">
+	<style name="DefaultTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
 	</style>
