--- a/app/src/main/res/layout/dialog_benchmark.xml
+++ b/app/src/main/res/layout/dialog_benchmark.xml
@@ -6,6 +6,7 @@ android:padding="12dp"
 android:orientation="vertical"
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
+	style="@style/FillNone"
 	android:id="@+id/text01"
 	android:textColor="?android:attr/textColorPrimary"
 	android:text="@string/benchmark"/>
