--- a/app/src/main/res/layout/dialog_newgame_local.xml
+++ b/app/src/main/res/layout/dialog_newgame_local.xml
@@ -3,7 +3,9 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:padding="16dp"
 android:shrinkColumns="*"
-android:stretchColumns="1">
+android:stretchColumns="1"
+android:layout_height="match_parent"
+android:layout_width="match_parent">
 	<TableRow>
 		<TextView
 		android:layout_gravity="right|center_vertical"
