--- a/app/src/main/res/layout/dialog_single_text.xml
+++ b/app/src/main/res/layout/dialog_single_text.xml
@@ -3,4 +3,7 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/text"
 android:padding="16dp"
+android:layout_height="wrap_content"
+android:layout_width="wrap_content"
+android:textSize="16sp"
 android:textColor="?android:attr/textColorPrimary"/>
