--- a/app/src/main/res/layout/gamelist_cell_empty.xml
+++ b/app/src/main/res/layout/gamelist_cell_empty.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+style="@style/FillBoth"
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:id="@+id/nogames"
@@ -11,6 +12,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:text="No Games"/>
 	<TextView
 	android:id="@+id/message"
+	style="@style/FillNone"
 	android:layout_centerHorizontal="true"
 	android:layout_below="@id/nogames"
 	android:textSize="14sp"/>
