--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -56,5 +56,5 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:text="Sign Up"
 	android:textSize="14sp"
 	android:textColor="#fff"
-	android:background="@color/green_light_A700"/>
+	android:background="@color/green_A700"/>
 </RelativeLayout>
