--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -38,7 +38,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 			app:title="Light Border"/>
 			<com.chess.genesis.view.ColorPickerPreference
 			app:key="bcInnerSelect"
-			app:defaultValue="@color/green_light_A700"
+			app:defaultValue="@color/green_A700"
 			app:persistent="true"
 			app:title="Selected"/>
 			<com.chess.genesis.view.ColorPickerPreference
