--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -40,6 +40,10 @@
 		<item>capturedBelow</item>
 		<item>true</item>
 	</array>
+	<array name="pf_autoSubmitMove">
+		<item>autoSubmitMove</item>
+		<item>false</item>
+	</array>
 	<array name="pf_isLoggedIn">
 		<item>isLoggedIn</item>
 		<item>false</item>
