--- a/app/src/main/res/xml/settings_page.xml
+++ b/app/src/main/res/xml/settings_page.xml
@@ -20,6 +20,11 @@
             app:title="Show Captured Below"
             app:summary="Display captured pieces below the board else above the board"/>
         <CheckBoxPreference
+            app:key="autoSubmitMove"
+            app:defaultValue="false"
+            app:title="Auto Submit Move"
+            app:summary="Automatically submit moves without confirmation dialog"/>
+        <CheckBoxPreference
             app:key="screenAlwaysOn"
             app:defaultValue="false"
             app:title="Keep Screen Active"
