--- a/app/src/main/res/xml/settings_page.xml
+++ b/app/src/main/res/xml/settings_page.xml
@@ -3,6 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory
+        app:title="Account">
+        <Preference
+            app:key="currentUsername"
+            app:persistent="false"
+            app:title="Username"
+            app:summary="Not logged in"/>
+    </PreferenceCategory>
+    <PreferenceCategory
         app:title="Board Settings">
         <CheckBoxPreference
             app:key="viewAsBlack"
